--- a/_posts/2024-07-21-enumerate-possible-options/enumerate-possible-options.Rmd
+++ b/_posts/2024-07-21-enumerate-possible-options/enumerate-possible-options.Rmd
@@ -10,7 +10,7 @@ author:
     affiliation: University of Pennsylvania Linguistics
     affiliation_url: https://live-sas-www-ling.pantheon.sas.upenn.edu/
     orcid_id: 0000-0002-0701-921X
-date: "`r Sys.Date()`"
+date: 07-21-2024
 output:
   distill::distill_article:
     include-after-body: "highlighting.html"
